--- a/plants-app/src/components/newNote/newNote.scss
+++ b/plants-app/src/components/newNote/newNote.scss
@@ -8,13 +8,15 @@
     max-width: 700px;
     border-radius: 5rem;
     animation: .5s fadeIn;
-    margin: 15% 0;
+    margin: 0 auto;
     @include bp-medium{
-        border-radius: 3rem;
         width: 90%;
         position: relative;
         top: 50%;
         transform: translateY(-50%);
+    }
+    @include bp-small{
+        border-radius: 3rem;
     }
     .form-inputs{
         margin-bottom: 2.6rem;
@@ -49,7 +51,12 @@
     textarea{
        width: 100%;
        height: 20rem;
-       padding-top: 1rem;
+       padding-top: 3rem;
+       padding-left: 2rem;
+       border-radius: 3rem;
+       @include bp-small{
+           border-radius: 2rem;
+       }
       
 
         @include bp-medium{
@@ -71,9 +78,11 @@
         display: flex;
         flex-direction: row;
         justify-content: space-between;
-        max-width: 285px;
+        max-width: 300px;
+        padding-left: 2rem;
         @include bp-small{
             flex-wrap: wrap;
+            padding-left: unset;
         }
     
         
@@ -90,9 +99,9 @@
                 svg{
                     height: 4rem;
                     width: 4rem;
-                    @include  bp-x-small{
-                        height: 3rem;
-                        width: 3rem;
+                    @include  bp-small{
+                        height: 2.5rem;
+                        width: 2.5rem;
                         }
                     }
                     
