--- a/plants-app/src/sass/_base.scss
+++ b/plants-app/src/sass/_base.scss
@@ -236,10 +236,12 @@ a{
       background-color: $blush;
       margin-bottom: unset;
       color: $gray;
-      border-radius: 0 0 3rem 3rem;
+      border-radius: 0 0 5rem 5rem;
       transition: background-color .5s ease-in-out;
       @include bp-small{
         font-size: 1rem;
+        height: 5rem;
+        border-radius: 0 0 3rem 3rem;
       }
 
       @include bp-small{
@@ -279,6 +281,7 @@ input,select,textarea, label{
       border-radius: 3rem;
     }
 }
+
 option:disabled > select {
   color: $light-gray;
 
@@ -295,6 +298,8 @@ input::placeholder, select::placeholder{
 }
 textarea{
   background-color: white;
+  padding-left: 2rem;
+  padding-top: 3rem;
 }
 input,select, textarea{
   outline:none;
